# kernel-near

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: NEARContractEditor.tsx
